fixes - fixed logging - fixed question test wrapping - fixed prod script and source maps - bumped version

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,6 @@
 }
 
 .question_title {
-    word-break: break-all;
     color: #000000;
     font-family: "HelveticaNeue-Bold";
     font-size: 18px;
